--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,23 @@ header{
 .terza-riga{
     background-color: #B1E5F2 ;
 }
+
+.interessi{
+    color: #808080;
+}
+
+.box-img{
+    background-image: url('../img/monitor.jpg');
+    width: 300px;
+    height: 200px;
+    color: white;
+
+}
+
+.box-img2{
+    background-image: url('../img/graph.jpg');
+    width: 300px;
+    height: 200px;
+    color: white;
+
+}
